# letter-shell

./: CMakeLists.txt
demo/x86-gcc/: CMakeLists.txt  main.c  shell.lds  shell_cfg_user.h  shell_cpp.cpp  shell_port.c
extensions/cpp_support/: shell_cpp.h
extensions/fs_support/: shell_fs.h
extensions/game/2048/: 2048.c
extensions/log/: log.c  log.h
extensions/shell_enhance/: shell_cmd_group.h  shell_passthrough.h
extensions/telnet/: telnetd.c
src/: shell.c  shell.h  shell_cfg.h  shell_ext.c  shell_ext.h
